<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/TextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingStart="32dp"
            android:paddingTop="72dp"
            android:paddingEnd="24dp"
            android:paddingBottom="72dp"
            android:text="@string/Number0"
            android:textColor="@color/Black"
            android:textSize="64sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BtnsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/Row1Layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BtnClear"
                style="@style/Operation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Clear"
                android:textSize="36sp" />

            <Button
                android:id="@+id/BtnTimes"
                style="@style/Operation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Times"
                android:textSize="24sp" />

            <Button
                android:id="@+id/BtnDivide"
                style="@style/Operation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Divide"
                android:textSize="36sp" />

            <Button
                android:id="@+id/BtnDelete"
                style="@style/Operation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/BackSpace"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Row2Layout"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Btn7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number7"
                android:textSize="36sp" />

            <Button
                android:id="@+id/Btn8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number8"
                android:textSize="36sp" />

            <Button
                android:id="@+id/Btn9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number9"
                android:textSize="36sp" />

            <Button
                android:id="@+id/BtnPlus"
                style="@style/Operation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Plus"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Row3Layout"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Btn4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number4"
                android:textSize="36sp" />

            <Button
                android:id="@+id/Btn5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number5"
                android:textSize="36sp" />

            <Button
                android:id="@+id/Btn6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number6"
                android:textSize="36sp" />

            <Button
                android:id="@+id/BtnMinus"
                style="@style/Operation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Minus"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Row4Layout"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Btn1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/Btn2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number2"
                android:textSize="36sp" />

            <Button
                android:id="@+id/Btn3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number3"
                android:textSize="36sp" />

            <Button
                android:id="@+id/BtnRaminder"
                style="@style/Operation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Remainder"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Row5Layout"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BtnNegative"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/PlusMinus"
                android:textSize="36sp" />

            <Button
                android:id="@+id/Btn0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number0"
                android:textSize="36sp" />

            <Button
                android:id="@+id/BtnDot"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Dot"
                android:textSize="36sp" />

            <Button
                android:id="@+id/BtnEqual"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Equal"
                android:textSize="36sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>